--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     "marked": "^3.0.4",
     "mongoose": "^6.0.9",
     "multer": "^1.4.3",
+    "nodemon": "^2.0.13",
     "path": "^0.12.7",
     "slugify": "^1.6.1"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.13"
-  }
+  "devDependencies": {}
 }
