--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.3.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dompurify": "^2.3.3",
     "graphql": "^15.6.1",
     "jsdom": "^17.0.0",
+    "jsonwebtoken": "^8.5.1",
     "marked": "^3.0.4",
     "mongoose": "^6.0.9",
     "multer": "^1.4.3",
