--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.3.0",
+    "apollo-server-express": "^3.5.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dompurify": "^2.3.3",
+    "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
     "graphql": "^15.6.1",
     "jsdom": "^17.0.0",
     "jsonwebtoken": "^8.5.1",
